src/TRAISI/ClientApp/src/survey-viewer-app/app/components/survey-viewer/survey-viewer.component.scss
@import "../../../assets/scss/application.scss";

.survey-body-container {
	margin: auto;
	text-align: center;
	overflow-y: auto;
	width: 100%;
	min-height: 500px;

}

.survey-body {
	text-align: left;
	display: block;
}


.survey-title-container
{
	text-align: center;
	margin:10px;
}

.survey-footer-container
{
	background: $light;
}

.footer-inner
{
	text-align: center;
	font-size: 14px;
	margin:10px;
}

.traisi-survey-viewer-container
{
	display: flex;
	flex-direction: column;
	max-height:100%;
}

.navigation-button
{
	display: inline-block;
	margin:20px;
	button{
		width: 100px;
	}

}

.survey-navigation-container
{
	display: flex;
    align-items: center;
    align-content: center;
	justify-content: center;

}


@include media-breakpoint-only(xs) {
	.survey-body {
		margin: 10px;
	}
}

@include media-breakpoint-only(sm) {
	.survey-body {
		margin: 15px;
	}
}

@include media-breakpoint-only(md) {
	.survey-body {
		margin: 20px;
	}
}

@include media-breakpoint-only(lg) {
	.survey-body {
		margin: 20px;
	}
}

@include media-breakpoint-only(xl) {

	.survey-body {
		margin: 25px;
	}

}

